project page overflow in mobile view fixed

--- a/public/css/project-page/dscprojects.css
+++ b/public/css/project-page/dscprojects.css
@@ -20,7 +20,7 @@ main {
   flex: wrap;
   padding: 3rem;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
+  -ms-flex-pack: center; 
   justify-content: center;
   -webkit-box-align: center;
   -ms-flex-align: center;
@@ -140,7 +140,6 @@ main {
   width: 100%;
   /*  height: 100%;*/
 }
-
 .cards .card-content .col {
   width: 50%;
   height: 100%;
@@ -351,8 +350,8 @@ form input[type="submit"] {
     -ms-flex-pack: centers;
     justify-content: centers;
     width: 95vh;
-    height: 75vh;
-    padding: 30px;
+    height: 85vh;
+    padding: 30px 20px;
     margin: 3rem 0.5rem;
   }
   .card-content {
@@ -424,6 +423,12 @@ form input[type="submit"] {
     right: 5px;
     top: 5px;
     padding: 5px;
+  }
+  .more-details{
+    line-height:1.5em;
+    position:relative;
+    top:-20px;
+    width:105%;
   }
   .cards .card-content .col img {
     width: 30%;
